--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d lib"
   },
-  "author": "Kevin Squires",
+  "author": "Aaron Weisel",
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.26.0",
